--- a/MapViewer/MapViewer.csproj
+++ b/MapViewer/MapViewer.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0-preview.5.21301.5"/>
     <PackageReference Include="XAML.MapControl" Version="5.6.0"/>
   </ItemGroup>
 
