--- a/MapViewer/MapViewer.csproj
+++ b/MapViewer/MapViewer.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1"/>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0-preview.5.21301.5"/>
     <PackageReference Include="RestSharp" Version="106.11.8-alpha.0.14"/>
     <PackageReference Include="XAML.MapControl" Version="5.6.0"/>
